--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% block content %}
 
 {% load crispy_forms_tags %}
 
@@ -79,6 +81,11 @@
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
                 <!-- For later -->
+                {% if commented %}
+                <div class="alert alert-success" role="alert">
+                    Your comment is awaiting approval
+                </div>
+                {% else %}
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
@@ -88,7 +95,7 @@
                     {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
-
+                {% endif %}
                 {% endif %}
             </div>
         </div>
